# wasmtime

api/: search-index.js
api/cranelift/prelude/: trait.EntityRef.html
api/cranelift_codegen/: constant.VERSION.html
api/cranelift_codegen/ir/instructions/: enum.InstructionData.html  enum.Opcode.html
api/wasmtime_cli_flags/: index.html
api/wasmtime_environ/: struct.PrimaryMap.html
api/wiggle/wasmtime_crate/: enum.Val.html  trait.WasmParams.html  trait.WasmResults.html  trait.WasmRet.html  trait.WasmTy.html
ci/: run-wasi-nn-example.sh
crates/wasi-nn/: Cargo.toml
crates/wasi-nn/examples/classification-component-onnx/: Cargo.toml
crates/wasi-nn/examples/classification-component-onnx/src/: main.rs
crates/wasi-nn/examples/classification-example-onnx/: Cargo.toml  README.md
crates/wasi-nn/src/: witx.rs
crates/wasi-nn/src/backend/: mod.rs  onnx.rs  openvino.rs
